# FirstRepo

./: README.md  file_reader_node.cpp
cpp_pubsub/: CMakeLists.txt  package.xml
cpp_pubsub/install/: local_setup.sh  setup.sh
cpp_pubsub/install/cpp_pubsub/lib/cpp_pubsub/: talker
cpp_pubsub/install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh  package.xml
cpp_pubsub/log/: latest_build
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
log/: latest_build
my_package/: CMakeLists.txt  package.xml
my_package/data/: example.txt
